<resources>
    <string name="app_name">PawPalNetwork</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="name">Nombre</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefono</string>
    <string name="password">Password</string>
    <string name="descripcion">Descripcion</string>

    <string name="bienvenido">Bienvenido</string>
    <string name="detalles">Detalles</string>
    <string name="lore_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="mostrar_mas">Mostrar más</string>
    <string name="archivos">Archivos</string>
    <string name="servicios_contratados">Servicios contratados</string>
    <string name="pasear">Pasear</string>
    <string name="entrenar">Entrenar</string>
    <string name="otro">Otro</string>
    <string name="tax">Tax</string>
    <string name="descuento">Descuento</string>
    <string name="total">Total</string>
    <string name="cuidador">Cuidador</string>
    <string name="aceptado">Aceptado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_proveedor">Proveedor</string>
    <string name="title_activity_administrador">Administrador</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="contrasenia_actual">Contraseña actual</string>
    <string name="status">Estado</string>
    <string name="rol">Rol</string>


    <string-array name="tipo_servicio">
        <item>Pasear</item>
        <item>DayCare</item>
        <item>Entrenamiento</item>
        <item>Baño y Estetica</item>
        <item>Veterinario</item>
    </string-array>


</resources>