<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.proveedor.ui.perfil.EditCuentaProveedorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar Cuenta"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEditProvProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEditProvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEditProvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEditProvEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/status" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfCodigoPostal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:enabled="false"
                    android:hint="Codigo Postal" />

                <Button
                    android:id="@+id/btnUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Obtener Ubicación" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btneditaceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aceptar"
            android:padding="10dp"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</ScrollView>